force-app/main/default/objects/skedHC__Support_Plan__c/skedHC__Support_Plan__c.object-meta.xml
<CustomObject>
    <label>Support Plan</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Support Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>