force-app/main/default/objects/skedHC__Support_Plan__c/fields/skedHC__Account__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Support Plans</relationshipLabel>
    <relationshipName>Support_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>