force-app/main/default/objects/skedHC__Support_Plan__c/fields/skedHC__Description__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>